--- a/internship.html
+++ b/internship.html
@@ -41,6 +41,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698350098-social-media-internship'>Seeka Technology Social Media Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349989-content-writer-internship'>Seeka Technology Content Writer Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349958-graphics-design-internship'>Seeka Technology Graphics Design Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SkynetSecureSolutions/743999671072583-digital-marketing-internship'>Skynet Secure Solutions Digital Marketing - Internship | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Mumbai Mumbai, Maharashtra</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999698349854-business-internship'>Seeka Technology Business Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -77,7 +93,7 @@
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/eidosmontreal/job/oxOpbfwF'>Eidos Montr?al Careers - Stagiaire en Recherche Utilisateurs / User Research Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/eidosmontreal/job/oxOpbfwF'>Eidos Montr?al Careers - Stagiaire en Recherche Utilisateurs / User Research Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -113,7 +129,7 @@
 <p><span class="badge badge-light">Campbell Campbell</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/argo/jobs/1922955'>Job Application for 2020 Summer Internship: Radar & Vision Fusion at Argo AI</a></h5> 
+<h5><a href='https://boards.greenhouse.io/argo/jobs/1922955'>Job Application for 2020 Summer Internship: Radar & Vision Fusion at Argo AI</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -137,7 +153,7 @@
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://vkb.join.com/jobs/466526-intern-working-student-bus-dev-project-management-and-business-development-m-f-d'>Job @ uptodate Ventures (Munich): Intern/ Working ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vkb.join.com/jobs/466526-intern-working-student-bus-dev-project-management-and-business-development-m-f-d'>Job @ uptodate Ventures (Munich): Intern/ Working ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -149,11 +165,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/o3Ppbfwc'>Internet Brands Careers - Content Marketing Specialist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/o3Ppbfwc'>Internet Brands Careers - Content Marketing Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/oBGqbfwC'>Internet Brands Careers - Accounts Receivable Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oBGqbfwC'>Internet Brands Careers - Accounts Receivable Specialist</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -181,7 +197,7 @@
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/internetbrands/job/ojJqbfwn'>Internet Brands Careers - Technology Admin Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/ojJqbfwn'>Internet Brands Careers - Technology Admin Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -237,11 +253,11 @@
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/internetcreations/53fbb44c-5ac4-46e3-aac3-035ce15d1617'>Internet Creations - Salesforce Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/internetcreations/53fbb44c-5ac4-46e3-aac3-035ce15d1617'>Internet Creations - Salesforce Developer</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/internetcreations/7a7e71f8-9086-4cb3-80c4-4c9a1eea6ede'>Internet Creations - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/internetcreations/7a7e71f8-9086-4cb3-80c4-4c9a1eea6ede'>Internet Creations - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -293,7 +309,7 @@
 <p><span class="badge badge-light">Jakarta</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/intern-human-resources-3008'>Intern- Human Resources - Itron Careers</a></h5> 
+<h5><a href='https://itron.referrals.selectminds.com/jobs/intern-human-resources-3008'>Intern- Human Resources - Itron Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -313,7 +329,7 @@
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://strivetogether.applytojob.com/apply/vSdG4BMES2/Events-Intern'>Events Intern - StriveTogether - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://strivetogether.applytojob.com/apply/vSdG4BMES2/Events-Intern'>Events Intern - StriveTogether - Career Page</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -423,7 +439,7 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698269045-data-science-uk-summer-internship-2019'>Verisk Data Science UK Summer Internship 2019 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698269045-data-science-uk-summer-internship-2019'>Verisk Data Science UK Summer Internship 2019 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Edinburgh</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -441,22 +457,6 @@ something you're proud of. Or provide a link to some code for us to look at in t
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698264484-internship-channel-marketing'>Bosch Group Internship Channel Marketing | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Infobip/743999698264713-presales-engineering-internship'>Infobip Presales Engineering Internship | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698267293-research-uk-summer-internship-2020'>Verisk Research UK Summer Internship 2020 | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Edinburgh</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698264472-internship-marketing-department-f-m-'>Bosch Group Internship Marketing Department (f/m) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BeyondAssocies/743999698265640-beyond-associes-internship-executive-search'>Beyond Associes Beyond Associ?s - Internship Executive Search | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
